# neurocontainers

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  QSM_CI_MIGRATION_STRATEGY.md  README.md  all_dockerfiles.txt  analysis.md  fileprocess.yaml  generate_comprehensive_security_report.py  image_fix.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: .dive-ci.yml  copilot-instructions.md
brainles-preprocessing/: build.yaml
build3/: .gitignore  PLAN.md  README.md  __main__.py  pyproject.toml
build3/src/build3/: __init__.py  adapters.py  cli.py  config.py  recipe.py  staging.py  template_backend.py  validation.py
build3/src/build3/neurodocker_templates/: convert3d.yaml  dcm2niix.yaml  freesurfer.yaml  matlabmcr.yaml  minc.yaml  miniconda.yaml  spm12.yaml
build3/src/build3/templates/: afni.yaml  ants.yaml  fsl.yaml  mrtrix3.yaml
build3/tests/: conftest.py  test_adapters.py  test_all_dockerfile_parity.py  test_dockerfile_generation.py  test_ir_generation.py  test_parity_current_contract.py  test_recipe_loading.py  test_release.py  test_staging.py  test_template_rendering.py
build3/tests/fixtures/conditional/: build.yaml
build3/tests/fixtures/file_variants/: build.yaml
builder/: README.md  TESTING.md  adapters.py  build.py  cache.py  check.py  check_status.sh  check_version.py  cli.py  container_tester.py  docker-save-to-simg.go  docker-save-to-simg_test.go  dockerfile.py  extract_dockerfiles.sh  format_test_results.py  image_fingerprint.py  image_fix.py  ir.py  pr_test_runner.py  recipe.py  release.py  run_tests.py  staging.py  template.py  template_backend.py  test_all.sh  test_deploy.sh  test_dockerfile_naming.py  test_file_cache_behavior.py  test_tzdata_behavior.py  test_validation.py  tester.py  validation.py  variants.py
dashboard/: .gitignore  README.md  build.sh  env.go  github_test_report.go  go.mod  go.sum  main.go  parser_test.go
results/: test_results_20260326_185011.jsonl  test_results_20260326_190714.jsonl  test_results_20260326_190907.jsonl
scripts/: extract_descriptors.sh
tools/: download_all_logs.sh  generate_apps_json.py  generate_webapps_json.py  one_pr_release.py  variant_matrix.py
workflows/: ONE_PR_RELEASES.md  README.md  TESTING.md  __init__.py  add_pr_labels_with_retry.sh  container_tester.py  format_test_results.py  reporting.py  (+11 more)
(+1048 files in other folders)
