[project]
name = "neurocontainers"
version = "0.1.0"
description = "Neurocontainers YAML Build System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
    "attrs>=23.0.0",
]

[tool.setuptools]
packages = ["builder", "build3", "workflows"]

[tool.setuptools.package-dir]
build3 = "build3/src/build3"

[tool.setuptools.package-data]
build3 = ["templates/*.yaml"]

[tool.uv]
package = true

[project.scripts]
    build3 = "build3.cli:main"
    sf-generate = "build3.cli:sf_generate_main"
    sf-build = "build3.cli:sf_build_main"
    sf-login = "build3.cli:sf_login_main"
    sf-test = "build3.cli:sf_test_main"
    sf-test-remote = "build3.cli:sf_test_remote_main"
    sf-init = "build3.cli:sf_init_main"
    sf-make = "build3.cli:sf_make_main"
    sf-cache = "build3.cli:sf_cache_main"
