[project]
name = "neurocontainers"
version = "0.1.0"
description = "Neurocontainers YAML Build System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
    "attrs>=23.0.0",
]

[tool.setuptools]
packages = ["builder", "workflows"]

[tool.setuptools.package-data]
builder = ["templates/*.yaml"]

[tool.uv]
package = true

[project.scripts]
builder = "builder.cli:main"
sf-generate = "builder.cli:sf_generate_main"
sf-build = "builder.cli:sf_build_main"
sf-login = "builder.cli:sf_login_main"
sf-test = "builder.cli:sf_test_main"
sf-test-remote = "builder.cli:sf_test_remote_main"
sf-init = "builder.cli:sf_init_main"
sf-make = "builder.cli:sf_make_main"
sf-cache = "builder.cli:sf_cache_main"
